--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "prettier": "^3.3.3",
     "react": "^18",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
