--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier": "^3.3.3",
     "react": "^18",
     "react-calendar": "^5.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
